# MyShell

./: CMakeLists.txt  a.out  game.c  game.h  ls  man  man.man  man.txt  myShell0.c  myShell0.h  my_cat.c  my_cat.h  my_cd  my_cd.c  my_cd2.c  my_cp.c  my_cp.h  my_cp2.c  my_grep  my_grep.c  my_grep.h  my_help.c  my_ls.c  my_ls.h  my_man.c  my_man.h  my_mv.c  my_shell.c  my_shell_asier.c  my_shell_original.c  mycp2  prueba  prueba1.txt  prueba2.txt  shell
Game/DigitalWorld/: .hero'sBag
Game/DigitalWorld/Mitocondria/MainStreet/Hero'sHouse/Stairs/SecondFloor/: chest2  chest3
Man/: Game  cat  cd   cp  game  grep  help  ls  man  mv  pwd
commandsC/: game.c  my_cat.c  my_cd.c  my_cp.c  my_cp2.c  my_grep.c  my_ls.c  my_man.c  my_mv.c  test.c
commandsH/: game.h  my_cd.h  my_cp.h  my_cp2.h  my_help.h  my_ls.h  my_mv.h  test.h
execs/: my_cat.c  my_cp.c  my_grep.c  my_ls.c  my_man.c  my_mv.c
storage/: bolsa
